Tue Nov 02 21:29:40 GMT 2004  Olly Betts <olly@survex.com>

	* getopt/getopt.cc: Fixes for Compaq C++.

Tue Nov 02 18:51:43 GMT 2004  Olly Betts <olly@survex.com>

	* getopt/getopt.cc: Protect getopt definition for possible getopt
	  macro declared in getopt.h.

Tue Nov 02 16:52:21 GMT 2004  Olly Betts <olly@survex.com>

	* configure.ac: AM_CONFIG_HEADER -> AC_CONFIG_HEADERS; removed
	  commented out AC_LANG_SAVE and AC_LANG_RESTORE.

Tue Nov 02 15:56:02 GMT 2004  Olly Betts <olly@survex.com>

	* configure.ac: # comments -> dnl comments.

Tue Nov 02 15:54:46 GMT 2004  Olly Betts <olly@survex.com>

	* configure.ac: $GCC -> $GXX; $CC -> $CXX.

Tue Nov 02 15:38:21 GMT 2004  Olly Betts <olly@survex.com>

	* configure.ac,docs/Makefile.am: Removed SOURCEDOC_C_SRC.

Tue Nov 02 06:51:39 GMT 2004  Olly Betts <olly@survex.com>

	* getopt/getopt.cc,getopt/getopt1.cc: Fixed function declarations to
	  not use K&R C syntax.

Tue Nov 02 05:31:57 GMT 2004  Olly Betts <olly@survex.com>

	* getopt/getopt.cc: Make _getopt_internal extern "C" too.

Tue Nov 02 04:43:08 GMT 2004  Olly Betts <olly@survex.com>

	* Makefile.am,configure.ac,HACKING,PLATFORMS,backends/muscat36/,
	  getopt/Makefile.am,getopt/getopt.cc,getopt/getopt1.cc,languages/:
	  Change the few C sources to be C++.  This way we don't need to
	  worry about configure choosing a mismatching pair of compilers,
	  or about whether configure tests with the C compiler don't apply
	  to the C++ compiler, or vice versa.

Tue Nov 02 04:31:49 GMT 2004  Olly Betts <olly@survex.com>

	* backends/muscat36/: More C casts converted to C++ casts.

Tue Nov 02 04:28:07 GMT 2004  Olly Betts <olly@survex.com>

	* matcher/bm25weight.cc,matcher/tradweight.cc: More C casts converted
	  to C++ casts.

Tue Nov 02 03:22:52 GMT 2004  Olly Betts <olly@survex.com>

	* backends/muscat36/: Removed unused test harness sources.

Tue Nov 02 02:44:34 GMT 2004  Olly Betts <olly@survex.com>

	* languages/pool.c,languages/pool.h: Removed unused sources.
